Fix redis caching for category query
