# config/swagger.yml
@@ -19,12 +19,10 @@ paths:
         - name: category
           in: query
           description: Display products with this category.
-          required: true
           type: string
         - name: name
           in: query
           description: Display products with this full or partial name.
-          required: true
           type: string
       tags:
         - Products
@@ -48,6 +46,7 @@ paths:
         - in: body
           name: Product
           description: Product Object
+          required: true
           schema:
             $ref: '#/definitions/Product'
       responses:
@@ -86,6 +85,7 @@ paths:
         - in: body
           name: Product
           description: Product Object
+          required: true
           schema:
             $ref: '#/definitions/Product'
       responses:
@@ -109,10 +109,16 @@ paths:
           description: An `product` object
           schema:
             $ref: '#/definitions/Product'
-  /products/categories:
+  '/products/{id}/categories':
     get:
       summary: Product Categories
       description: The Product Categories endpoint returns categories of the product.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: Product ID that needs to be fetched
+          type: string
       tags:
         - Categories
       responses:
@@ -126,10 +132,16 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /products/supplier:
+  '/products/{id}/supplier':
     get:
       summary: Product Owner
       description: The Product Owner endpoint returns a owner that supply the products to market.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: Product ID that needs to be fetched
+          type: string
       tags:
         - Supplier
       responses:
@@ -141,10 +153,16 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /products/place:
+  '/products/{id}/place':
     get:
       summary: Product Location
       description: The Product Location endpoint returns where the product is located in market.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: Product ID that needs to be fetched
+          type: string
       tags:
         - Place
       responses:
